# saftlib

./: .gitignore  .todorc.yaml  .travis.yml  AUTHORS  ActionSink_8hpp_source.html  BuildIdRom_8hpp_source.html  BurstGenerator_8h_source.html  BurstGenerator_8hpp_source.html  CommonFunctions_8h_source.html  CommonFunctions_8hpp_source.html  Condition_8hpp_source.html  Doxyfile  ECA_8hpp_source.html  ECA__Event_8hpp_source.html  ECA__TLU_8hpp_source.html  EmbeddedCPUActionSink_8h_source.html  EmbeddedCPUActionSink_8hpp_source.html  EmbeddedCPUCondition_8h_source.html  EmbeddedCPUCondition_8hpp_source.html  Error_8h_source.html  EventSource_8hpp_source.html  FunctionGeneratorFirmware_8h_source.html  FunctionGeneratorFirmware_8hpp_source.html  FunctionGeneratorImpl_8hpp_source.html  FunctionGenerator_8h_source.html  FunctionGenerator_8hpp_source.html  InoutImpl.cpp  Input_8h_source.html  Input_8hpp_source.html  IoControl_8hpp_source.html  Io_8hpp_source.html  LM32Cluster_8hpp_source.html  MILbusActionSink_8h_source.html  MILbusCondition_8h_source.html  Mailbox_8hpp_source.html  Makefile.am  MasterFunctionGenerator_8h_source.html  MasterFunctionGenerator_8hpp_source.html  MsiDevice_8hpp_source.html  OpenDevice_8hpp_source.html  (+803 more)
BDus/: Connection.cpp  Connection.h  Error.h  Interface.cpp  Interface.h  Makefile.am  Proxy.cpp  Proxy.h  bdus.cpp  bdus.h
BurstGeneratorAddon/: Makefile.am
BurstGeneratorAddon/src/: BurstGenerator.cpp  BurstGenerator.hpp  create_service.cpp  saft-burst-ctl.cpp
FunctionGenerator/: Makefile.am  configure.ac
FunctionGenerator/src/: FunctionGenerator.cpp  MasterFunctionGenerator.hpp  saft-burst-ctl.cpp  saft-fg-ctl.cpp
SimpleFirmwareAddon/: Makefile.am
SimpleFirmwareAddon/src/: SimpleFirmware.cpp  SimpleFirmware.hpp  create_service.cpp  simple-firmware-ctl.cpp
etherbone-plugin/: Makefile.am  configure.ac
etherbone-plugin/src/: ActionSink.cpp  ActionSink.hpp  BuildIdRom.cpp  Condition.cpp  Condition.hpp  Device.cpp  Device.hpp  ECA.cpp  ECA.hpp  ECA_TLU.cpp  ECA_TLU.hpp  EcaDriver.cpp  EcaDriver.hpp  EventSource.cpp  EventSource.hpp  Input.cpp  Input.hpp  Io.cpp  Io.hpp  IoControl.cpp  IoControl.hpp  Mailbox.cpp  OpenDevice.cpp  OpenDevice.hpp  Output.cpp  Output.hpp  OutputCondition.cpp  OutputCondition.hpp  Owned.cpp  Owned.hpp  SAFTd.cpp  SAFTd.hpp  SerdesClockGen.cpp  SerdesClockGen.hpp  SoftwareActionSink.cpp  SoftwareActionSink.hpp  SoftwareCondition.cpp  SoftwareCondition.hpp  TempSensor.cpp  TempSensor.hpp  (+17 more)
example-plugin/: .gitignore  Makefile.am  configure.ac
example-plugin/src/: Dice.cpp  Dice.hpp  Dice2.cpp  Dice2.hpp  SpecialDice.cpp  SpecialDice.hpp  create_service.cpp  saftbus-example-ctl.cpp
examples/ex02_dice_cup/: Makefile.am  configure.ac
fg-firmware-plugin/: Makefile.am
interfaces/: .gitignore  ActionSink.xml  BurstGenerator.xml  Condition.xml  Device.xml  Directory.xml  ECA.xml  ECA_Channel.xml  ECA_Condition.xml  EmbeddedCPUActionSink.xml  EmbeddedCPUCondition.xml  EventSource.xml  FunctionGenerator.xml  FunctionGeneratorFirmware.xml  IOControl.xml  Inoutput.xml  InputEventSource.xml  MILbusActionSink.xml  MILbusCondition.xml  Makefile.am  MasterFunctionGenerator.xml  OutputActionSink.xml  OutputCondition.xml  Owned.xml  SAFTd.xml  SCUbusActionSink.xml  SCUbusCondition.xml  SoftwareActionSink.xml  SoftwareCondition.xml  TLU.xml  TLU_Channel.xml  TimingReceiver.xml  Types.texi  WbmActionSink.xml  WrMilGateway.xml  common.xsl  cpp.xsl  doc.xsl  fix-docbook.xsl  h.xsl  (+3 more)
interfaces/BDus/: Connection.cpp  Connection.h  Error.cpp  Interface.cpp  Proxy.cpp  Proxy.h
interfaces/new/: Condition.xml  Directory.xml  EventSource.xml  Input.xml  MILbusActionSink.xml  MILbusCondition.xml  OutputActionSink.xml  OutputCondition.xml  Owned.xml  SCUbusActionSink.xml  SCUbusCondition.xml  SoftwareActionSink.xml  SoftwareCondition.xml
saftbus/: Connection.cpp  Connection.h  Doxyfile  Error.cpp  Error.h  Interface.cpp  Interface.h  Logger.cpp  Logger.h  MainContext.cpp  MainContext.h  MainLoop.cpp  Makefile.am  PollFD.cpp  PollFD.h  Proxy.cpp  Proxy.h  ProxyConnection.cpp  ProxyConnection.h  README  README.md  SignalGroup.cpp  SignalGroup.h  Socket.cpp  Socket.h  Source.cpp  chunck_allocator_rt.hpp  client.cpp  client.hpp  configurable_chunck_allocator_rt.cpp  configurable_chunck_allocator_rt.hpp  configure.ac  core.cpp  core.h  error.cpp  error.hpp  global_allocator.hpp  loop.cpp  loop.hpp  plugins.cpp  (+17 more)
saftbus/src/: client.cpp  client.hpp  configurable_chunck_allocator_rt.cpp  configurable_chunck_allocator_rt.hpp  error.cpp  global_allocator.hpp  loop.cpp  loop.hpp  plugins.cpp  (+13 more)
saftcommon/: CommonFunctions.cpp  CommonFunctions.h  Connection.cpp  Connection.h  Data.hpp  Error.cpp  Error.h  GELF.cpp  GELF.hpp  GELFConfig.hpp  Interface.cpp  Interface.h  InternalGELF.hpp  Logger.cpp  Logger.h  MainContext.cpp  MainContext.h  MainLoop.cpp  MainLoop.h  Makefile.am  MessageBuilder.cpp  PackageBuilder.hpp  PackageCompressor.cpp  PluginLoader.cpp  PluginLoader.h  PollFD.cpp  PollFD.h  Proxy.cpp  Proxy.h  ProxyConnection.cpp  ProxyConnection.h  SignalGroup.cpp  SignalGroup.h  Source.cpp  Source.h  Time.cpp  Time.h  chunck_allocator_rt.cpp  chunck_allocator_rt.h  core.cpp  (+4 more)
saftlib-plugin/: .gitignore  Makefile.am  README.md  configure.ac  saftlib.pc.in
src/: .gitignore  ActionSink.cpp  ActionSink.hpp  AnalyzeJitterMSI.cpp  AnalyzeJitterMSI.hpp  BaseObject.cpp  BaseObject.h  BuildIdRom.cpp  BuildIdRom.hpp  BurstGenerator.cpp  BurstGenerator.hpp  CommonFunctions.cpp  CommonFunctions.h  CommonFunctions.hpp  Condition.cpp  Condition.hpp  Device.cpp  Device.h  Directory.cpp  Directory.h  Driver.cpp  Driver.h  ECA.cpp  ECA.hpp  ECA.xml  ECA_Event.cpp  ECA_Event.hpp  ECA_TLU.cpp  ECA_TLU.hpp  EmbeddedCPUActionSink.cpp  EmbeddedCPUActionSink.hpp  EmbeddedCPUCondition.cpp  EmbeddedCPUCondition.hpp  Error.h  EventSource.cpp  EventSource.hpp  FunctionGenerator.cpp  FunctionGenerator.hpp  FunctionGeneratorFirmware.cpp  FunctionGeneratorFirmware.hpp  (+170 more)
timingreceiver-plugin/: .gitignore  Makefile.am  configure.ac
tuc/: Makefile.am  tuc.cpp  tuc.h
(+585 files in other folders)
