AUTOMAKE_OPTIONS=foreign subdir-objects
ACLOCAL_AMFLAGS = -I m4
AM_CPPFLAGS = -Wall -g  $(SAFTBUS_CFLAGS) $(SAFTLIB_CFLAGS) $(SIGCPP_CFLAGS) -I $(top_srcdir)/src -I $(top_builddir)/src 

BUILT_SOURCES = \
	src/BurstGenerator_Service.cpp            \
	src/BurstGenerator_Service.hpp            \
	src/BurstGenerator_Proxy.cpp              \
	src/BurstGenerator_Proxy.hpp    

lib_LTLIBRARIES = \
	lib@PACKAGE@-service.la  \
	lib@PACKAGE@-proxy.la    
# @PACKAGE@ is substituded with the string given to AC_INIT([...])
# lib@PACKAGE@_service_la_LDFLAGS = -Wl,--export-dynamic 
lib@PACKAGE@_service_la_CPPADD = $(SIGCPP_CFLAGS)
lib@PACKAGE@_service_la_LIBADD = $(SAFTBUS_LIBS) $(SAFTLIB_LIBS) $(SIGCPP_LIBS) -ldl
lib@PACKAGE@_service_la_SOURCES = \
	src/BurstGenerator.cpp                   \
	src/BurstGenerator_Service.cpp            \
	src/create_service.cpp

lib@PACKAGE@_service_includedir = $(includedir)/@PACKAGE@/service
lib@PACKAGE@_service_include_HEADERS = \
	src/BurstGenerator.hpp                        \
	src/BurstGenerator_Service.hpp                 

lib@PACKAGE@_proxy_la_LIBADD  = $(SAFTBUS_LIBS) $(SAFTLIB_LIBS) $(SIGCPP_LIBS)
lib@PACKAGE@_proxy_la_SOURCES =   \
	src/BurstGenerator_Proxy.cpp                   

lib@PACKAGE@_proxy_includedir = $(includedir)/@PACKAGE@
lib@PACKAGE@_proxy_include_HEADERS = \
	src/BurstGenerator_Proxy.hpp                



bin_PROGRAMS = saft-burst-ctl
saft_burst_ctl_LDADD   = $(SAFTBUS_LIBS) $(SAFTLIB_LIBS)  $(SIGCPP_LIBS) lib@PACKAGE@-proxy.la
saft_burst_ctl_SOURCES = src/saft-burst-ctl.cpp 

# saft_burst_standalone_LDADD   = $(SAFTBUS_LIBS) $(SAFTLIB_LIBS)  $(SIGCPP_LIBS) lib@PACKAGE@-service.la
# saft_burst_standalone_SOURCES = src/saft-burst-standalone.cpp 

# autogenerated files
$(BUILT_SOURCES): src/BurstGenerator.hpp
	saftbus-gen $< -o src

# cleaning of autogenerated files
CLEANFILES = $(top_builddir)/src/*_Proxy.*pp $(top_builddir)/src/*_Service.*pp 
