AUTOMAKE_OPTIONS=foreign subdir-objects
ACLOCAL_AMFLAGS = -I m4
AM_CPPFLAGS = -Wall -g  $(SAFTBUS_CFLAGS) $(SAFTLIB_CFLAGS) $(SIGCPP_CFLAGS) -I $(top_srcdir)/src -I $(top_builddir)/src 

BUILT_SOURCES =                             \
	src/FunctionGenerator_Service.hpp        \
	src/MasterFunctionGenerator_Service.hpp   \
	src/FunctionGeneratorFirmware_Service.hpp  \
	src/FunctionGeneratorFirmware_Proxy.hpp

lib_LTLIBRARIES =           \
	lib@PACKAGE@-service.la  \
	lib@PACKAGE@-proxy.la

# @PACKAGE@ is substituded with the string given to AC_INIT([...])
lib@PACKAGE@_service_la_LDFLAGS = -Wl,--export-dynamic 
lib@PACKAGE@_service_la_CPPADD = $(SIGCPP_CFLAGS)
lib@PACKAGE@_service_la_LIBADD = $(SAFTBUS_LIBS) $(SAFTLIB_LIBS) $(SIGCPP_LIBS) -ldl
lib@PACKAGE@_service_la_SOURCES =        \
	src/FunctionGenerator.cpp             \
	src/FunctionGenerator_Service.cpp      \
	src/MasterFunctionGenerator.cpp         \
	src/MasterFunctionGenerator_Service.cpp  \
	src/FunctionGeneratorImpl.cpp             \
	src/FunctionGeneratorFirmware.cpp          \
	src/FunctionGeneratorFirmware_Service.cpp   \
	src/create_service.cpp

lib@PACKAGE@_service_includedir = $(includedir)/@PACKAGE@/service
lib@PACKAGE@_service_include_HEADERS =   \
	src/FunctionGenerator.hpp             \
	src/FunctionGenerator_Service.hpp      \
	src/MasterFunctionGenerator.hpp         \
	src/MasterFunctionGenerator_Service.hpp  \
	src/FunctionGeneratorImpl.hpp             \
	src/FunctionGeneratorFirmware.hpp          \
	src/FunctionGeneratorFirmware_Service.hpp

lib@PACKAGE@_proxy_la_LIBADD  = $(SAFTBUS_LIBS) $(SAFTLIB_LIBS) $(SIGCPP_LIBS)
lib@PACKAGE@_proxy_la_SOURCES =             \
	src/FunctionGenerator_Proxy.cpp          \
	src/MasterFunctionGenerator_Proxy.cpp     \
	src/FunctionGeneratorFirmware_Proxy.cpp   

lib@PACKAGE@_proxy_includedir = $(includedir)/@PACKAGE@
lib@PACKAGE@_proxy_include_HEADERS =        \
	src/FunctionGenerator_Proxy.hpp          \
	src/MasterFunctionGenerator_Proxy.hpp     \
	src/FunctionGeneratorFirmware_Proxy.hpp   

bin_PROGRAMS = saft-fg-ctl saft-mfg-ctl
saft_fg_ctl_LDADD   = $(SAFTBUS_LIBS) $(SAFTLIB_LIBS)  $(SIGCPP_LIBS) lib@PACKAGE@-proxy.la
saft_fg_ctl_SOURCES = src/saft-fg-ctl.cpp 

saft_mfg_ctl_LDADD   = $(SAFTBUS_LIBS) $(SAFTLIB_LIBS)  $(SIGCPP_LIBS) lib@PACKAGE@-proxy.la -lpthread
saft_mfg_ctl_SOURCES = src/saft-mfg-ctl.cpp 

# autogenerated files
$(BUILT_SOURCES): src/FunctionGeneratorFirmware.hpp 
	saftbus-gen $< -o src $(SAFTLIB_CFLAGS)

# cleaning of autogenerated files
CLEANFILES = $(top_builddir)/src/*_Proxy.*pp $(top_builddir)/src/*_Service.*pp 
