AUTOMAKE_OPTIONS=foreign subdir-objects
ACLOCAL_AMFLAGS = -I m4
AM_CPPFLAGS = -Wall -g  $(SAFTBUS_CFLAGS) $(SAFTLIB_CFLAGS) $(SIGCPP_CFLAGS) -I $(top_srcdir)/src -I $(top_builddir)/src 

BUILT_SOURCES = \
	src/SimpleFirmware_Service.cpp            \
	src/SimpleFirmware_Service.hpp            \
	src/SimpleFirmware_Proxy.cpp              \
	src/SimpleFirmware_Proxy.hpp    

lib_LTLIBRARIES = \
	lib@PACKAGE@_service.la  \
	lib@PACKAGE@_proxy.la    
# @PACKAGE@ is substituded with the string given to AC_INIT([...])
# lib@PACKAGE@_service_la_LDFLAGS = -Wl,--export-dynamic 
lib@PACKAGE@_service_la_CPPADD = $(SIGCPP_CFLAGS)
lib@PACKAGE@_service_la_LIBADD = $(SAFTBUS_LIBS) $(SAFTLIB_LIBS) $(SIGCPP_LIBS) -ldl
lib@PACKAGE@_service_la_SOURCES = \
	src/SimpleFirmware.cpp                   \
	src/SimpleFirmware_Service.cpp            \
	src/create_service.cpp

lib@PACKAGE@_service_includedir = $(includedir)/@PACKAGE@/service
lib@PACKAGE@_service_include_HEADERS = \
	src/SimpleFirmware.hpp                        \
	src/SimpleFirmware_Service.hpp                 

lib@PACKAGE@_proxy_la_LIBADD  = $(SAFTBUS_LIBS) $(SAFTLIB_LIBS) $(SIGCPP_LIBS)
lib@PACKAGE@_proxy_la_SOURCES =   \
	src/SimpleFirmware_Proxy.cpp                   

lib@PACKAGE@_proxy_includedir = $(includedir)/@PACKAGE@
lib@PACKAGE@_proxy_include_HEADERS = \
	src/SimpleFirmware_Proxy.hpp                



bin_PROGRAMS = simple-firmware-ctl simple-firmware-standalone
simple_firmware_ctl_LDADD   = $(SAFTBUS_LIBS) $(SAFTLIB_LIBS)  $(SIGCPP_LIBS) lib@PACKAGE@_proxy.la
simple_firmware_ctl_SOURCES = src/simple-firmware-ctl.cpp src/SimpleFirmware_Proxy.hpp

simple_firmware_standalone_LDADD   = $(SAFTBUS_LIBS) $(SAFTLIB_LIBS)  $(SIGCPP_LIBS) lib@PACKAGE@_service.la
simple_firmware_standalone_SOURCES = src/simple-firmware-standalone.cpp 

# autogenerated files
%_Service.cpp %_Service.hpp %_Proxy.cpp %_Proxy.hpp: %.hpp
	saftbus-gen $< -o src

# cleaning of autogenerated files
CLEANFILES = $(top_builddir)/src/*_Proxy.*pp $(top_builddir)/src/*_Service.*pp 
