AUTOMAKE_OPTIONS=foreign subdir-objects
ACLOCAL_AMFLAGS = -I m4
AM_CPPFLAGS = -Wall -g  $(SAFTBUS_CFLAGS) -I$(top_srcdir) -I $(top_srcdir)/src -I $(top_builddir)/src -I /home/michael/local/include/saftbus -I /home/michael/local/include -DDATADIR='"@datadir@/@PACKAGE@"'

lib_LTLIBRARIES = \
	lib@PACKAGE@_service.la  \
	lib@PACKAGE@_proxy.la    
# @PACKAGE@ is substituded with the string given to AC_INIT([...])
lib@PACKAGE@_service_la_LDFLAGS = -Wl,--export-dynamic 
lib@PACKAGE@_service_la_CPPADD  = $(EB_CFLAGS) 
lib@PACKAGE@_service_la_LIBADD  = $(EB_LIBS)
lib@PACKAGE@_service_la_SOURCES =                                 \
	src/Time.cpp                        src/Time.hpp               \
	src/eb-source.cpp                   src/eb-source.hpp           \
	src/eb-forward.cpp                  src/eb-forward.hpp           \
	src/SAFTd.cpp                       src/SAFTd.hpp                 \
	src/SAFTd_Service.cpp               src/SAFTd_Service.hpp          \
	src/Condition.cpp                   src/Condition.hpp               \
	src/Condition_Service.cpp           src/Condition_Service.hpp        \
	src/ActionSink.cpp                  src/ActionSink.hpp                \
	src/ActionSink_Service.cpp          src/ActionSink_Service.hpp         \
	src/SoftwareCondition.cpp           src/SoftwareCondition.hpp           \
	src/SoftwareCondition_Service.cpp   src/SoftwareCondition_Service.hpp    \
	src/SoftwareActionSink.cpp          src/SoftwareActionSink.hpp            \
	src/SoftwareActionSink_Service.cpp  src/SoftwareActionSink_Service.hpp     \
	src/TimingReceiver.cpp              src/TimingReceiver.hpp                  \
	src/TimingReceiver_Service.cpp      src/TimingReceiver_Service.hpp           \
	src/create_service.cpp

# lib@PACKAGE@_proxy_la_CPPADD  = -DDATADIR='"$(datadir)"'
lib@PACKAGE@_proxy_la_LIBADD  = $(SAFTBUS_LIBS)
lib@PACKAGE@_proxy_la_SOURCES =   \
	src/Time.cpp                   \
	src/SAFTd_Proxy.cpp             \
	src/Condition_Proxy.cpp          \
	src/ActionSink_Proxy.cpp          \
	src/SoftwareCondition_Proxy.cpp    \
	src/SoftwareActionSink_Proxy.cpp    \
	src/TimingReceiver_Proxy.cpp         


lib@PACKAGE@_proxy_includedir = $(includedir)/@PACKAGE@
lib@PACKAGE@_proxy_include_HEADERS = \
	src/Time.hpp                      \
	src/SAFTd_Proxy.hpp                \
	src/Condition_Proxy.hpp             \
	src/ActionSink_Proxy.hpp             \
	src/SoftwareCondition_Proxy.hpp       \
	src/SoftwareActionSink_Proxy.hpp       \
	src/TimingReceiver_Proxy.hpp


bin_PROGRAMS = eb-plugin-ctl eb-standalone
eb_plugin_ctl_LDADD   = $(EB_LIBS) $(SAFTBUS_LIBS) lib@PACKAGE@_proxy.la
eb_plugin_ctl_SOURCES = src/eb-plugin-ctl.cpp 

eb_standalone_LDADD   = $(EB_LIBS) $(SAFTBUS_LIBS) -lsaftbus-standalone lib@PACKAGE@_service.la
eb_standalone_SOURCES = src/eb-standalone.cpp

leapseconddir = $(datadir)/@PACKAGE@
leapsecond_DATA = leap-seconds.list
EXTRA_DIST = leap-seconds.list


# autogenerated files
%_Service.cpp: %.hpp
	saftbus-gen $< -o src

%_Service.hpp: %.hpp
	saftbus-gen $< -o src

%_Proxy.cpp: %.hpp
	saftbus-gen $< -o src

%_Proxy.hpp: %.hpp
	saftbus-gen $< -o src

# cleaning of autogenerated files
CLEANFILES = $(top_builddir)/src/*_Proxy.*pp $(top_builddir)/src/*_Service.*pp 
